<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainContent.PersonalAccount.PersonalAccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/avatarUserPersonalAccount"
                android:layout_width="wrap_content"
                android:src="@drawable/useravatar"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/nameUserPersonalAccount"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text=""
                android:backgroundTint="#ABAFBA"
                android:hint="@string/personalAccountUser_name"
                android:textColor="#5E6064"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_below="@id/avatarUserPersonalAccount"/>
            <EditText
                android:id="@+id/cityUserPersonalAccount"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text=""
                android:hint="@string/personalAccountUser_city"
                android:textSize="16sp"
                android:textColor="#5E6064"
                android:backgroundTint="#ABAFBA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_below="@id/nameUserPersonalAccount"/>
            <EditText
                android:id="@+id/phoneUserPersonalAccount"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                android:text=""
                android:hint="@string/personalAccountUser_numberphone"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="#5E6064"
                android:backgroundTint="#ABAFBA"
                android:layout_below="@id/cityUserPersonalAccount"/>
            <EditText
                android:id="@+id/emailUserPersonalAccount"
                android:layout_marginTop="6dp"
                android:textStyle="bold"
                android:text=""
                android:hint="@string/personalAccountUser_email"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="#5E6064"
                android:backgroundTint="#ABAFBA"
                android:layout_below="@id/phoneUserPersonalAccount"/>
            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:text="@string/personalAccountUser_save_changes"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:background="@drawable/riple_effect"
                android:textColor="#18A0FF"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailUserPersonalAccount"/>
            <Button
                android:id="@+id/btnAboutAppNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="#5E6064"
                android:layout_marginTop="20dp"
                android:textSize="17sp"
                android:layout_below="@id/btnSave"
                android:background="@drawable/riple_effect"
                android:text="@string/personalAccountUser_aboutApp"/>
            <Button
                android:id="@+id/btnSignOut"
                android:layout_width="match_parent"
                android:text="@string/personalAccountUser_logout"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:background="@drawable/riple_effect"
                android:textColor="#9C1C29"
                android:layout_marginTop="15dp"
                android:textSize="17sp"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnAboutAppNext"/>

        </RelativeLayout>
    </ScrollView>


</FrameLayout>