<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF2E8BE8"
    tools:context=".Regist.SignAuth">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="50sp" />

        <LinearLayout
            android:id="@+id/linear_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/titleName"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/enterYourPhoneNumber"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:ccp_clickable="false"
                        app:ccp_defaultLanguage="RUSSIAN"
                        app:ccp_defaultNameCode="RU" />


                    <EditText
                        android:id="@+id/setNumberUserText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:inputType="phone"
                        android:singleLine="true" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/userTextCardView"
            android:layout_width="match_parent"
            android:layout_below="@+id/linear_layout_phone"
            android:layout_centerHorizontal="true"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/getUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:ems="12"
                android:gravity="center_horizontal"
                android:hint="@string/enterYourName"
                android:inputType="textPersonName" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cityUserTextCardView"
            android:layout_width="match_parent"
            android:layout_below="@+id/userTextCardView"
            android:layout_centerHorizontal="true"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/getUserCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:ems="12"
                android:gravity="center_horizontal"
                android:hint="@string/enterYourCity"
                android:inputType="textPersonName" />

        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cityUserTextCardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:onClick="onClickAuth"
            android:background="@drawable/enter_button_style"
            android:text="@string/enter"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/white"/>
    </RelativeLayout>




</RelativeLayout>